# twickenham_events

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CHANGE_DETECTION.py  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIGURATION_CLEANUP_SUMMARY.md  CRON_SETUP.md  Dockerfile  FLIGHTS_CLI.md  HANDOFF_DETAILED_ERRORS_UPDATE.md  HA_MDI_ICON_QUESTIONS.md  HEALTH_CHECK_UPTIME_KUMA.md  LICENSE  LOGGING_IMPROVEMENTS.md  MQTT_ENHANCEMENT_SUMMARY.md  MQTT_WEB_SERVER_INTEGRATION.md  Makefile  PROJECT_HANDOFF.md  PROJECT_HANDOFF_COMPREHENSIVE.md  README.md  README_CORRUPTED.md  README_NEW.md  REFACTORING_SUMMARY.md  RUFF_MIGRATION_COMPLETE.md  SMART_URL_DETECTION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  VALIDATION_REPORT.md  WORKSPACE_CI_README.md  __init__.py  __main__.py  dates.py  debug_gateway.py  debug_script.py  debug_trophy.py  debug_visual_width.py  (+41 more)
.dev-scripts/: format.sh  run-all-tests.sh  run.sh  test.sh  update_ha_cards_links.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependabot.yml  docker-publish.yml  local-consistency.yml  pr-summary.yml  version-bump.yml
archive/core_legacy/: discovery_fresh.py  health_check.py  twick_event.py
archive/docs/: CONFIGURATION_CLEANUP_SUMMARY.md  HA_MDI_ICON_QUESTIONS.md  MQTT_LIBRARY_ENHANCEMENTS_NOTE.md
archive/output_test/: scrape_results.json
archive/scripts/: CHANGE_DETECTION.py  debug_health.py  health_web.py
archive/tests_legacy/: test_config_enhancement.py  test_dynamic_icons.py  test_enhanced_status.py  test_env_vars.py  test_event_icons.py  test_event_logic.py  test_event_shortener.py  test_minimal.py  test_no_space.py  test_twick_event_legacy_backup.py
archive/tests_legacy/ha_discovery/: test_entity.py
archive/twickenham_events/: calendar_generator_new.py  calendar_generator_old.py  scraper_old.py
config/: config.docker.yaml  config.yaml  config.yaml.example  flights.yaml  ha_discovery.yaml  ha_entities.yaml
core/: __init__.py  __main__.py  config.py  discovery_fresh.py  event_icons.py  event_shortener.py  ha_mqtt_discovery.py  health_check.py  ics_export.py  mqtt_publisher.py  twick_event.py  version.py  web_server.py
core/ha_discovery/: __init__.py  device.py  entity.py  publisher.py  status_sensor.py
dev/: A **Linux cron job** is a time-based job.md
docs/: AI_PROCESSING.md  CONFIGURATION_VALIDATION.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT_EXAMPLES.md  DOCKER_NETWORKING.md  EVENT_SHORTENING.md  GITHUB_ACTIONS.md  MULTIPROJECT_CI_STRATEGY.md  README.md  UNRAID_TEMPLATE_EXAMPLE.md  WEB_SERVER.md  ai_optimization.md  web_server_config.md
ha_card/: _twickenham_events_card.yaml  _twickenham_events_short_card.yaml  md_twickenham_events_upcoming.yaml  mshrm_twickenham_events_short_card.yaml  twickenham_events_all_upcoming_pop_up.yaml  twickenham_events_card.yaml  twickenham_events_upcoming_markdown.yaml
output/: error_log.txt  upcoming_events.json
scripts/: cleanup_discovery.py  extract-ci-standards.sh  generate_release_notes.py  ha_dashboard_backup_and_update.py  ha_dashboard_export_yaml.py  ics_validate.py  mqtt_purge_legacy_discovery.py  mqtt_validate.py  pre-commit-check.sh  sync_versions.py  upcoming_events_validate.py  update_docs.py  validate_all.py  validate_config.py  watch_buttons.py  web_validate.py  workspace-ci-manager.sh
src/flights/: __init__.py  __main__.py  config.py  mqtt_client.py  scraper.py
src/mqtt_publisher/: README.md  __init__.py  ha_discovery.py  message_handler.py  publisher.py
src/twickenham_events/: __init__.py  __main__.py  ai_processor.py  ai_shortener.py  calendar_generator.py  calendar_generator_new.py  calendar_generator_old.py  claude_provider.py  command_processor.py  config.py  constants.py  discovery_helper.py  enhanced_discovery.py  flatten.py  ha_integration.py  message_handler.py  mqtt_client.py  mqtt_utils.py  network_utils.py  plugin_loader.py  scraper.py  service_cycle.py  service_support.py  validation_utils.py  web_server.py
src/twickenham_events/web/: __init__.py  base_server.py  twickenham_server.py
systemd/: README.md  twickenham-events.service
tests/: __init__.py  conftest.py  test_ai_circuit_breaker.py  test_ai_combined.py  test_ai_router_gateway.py  test_ai_shortening_behavior.py  test_ai_type_and_icons.py  test_argument_parser.py  test_batch_migration.py  test_calendar_export.py  test_cli_cache_commands.py  test_command_cooldown.py  test_command_registry.py  test_config_enhancement.py  test_config_integration.py  test_config_systemd_defaults.py  test_config_validation_script.py  test_discovery_device_payload.py  test_emoji_integration.py  test_end_to_end.py  test_enhanced_network_utils.py  test_environment_handling.py  test_error_status.py  test_event_date_regressions.py  test_event_logic.py  test_event_shortener.py  test_event_shortener_new.py  test_flatten.py  test_flights_cli.py  test_ha_integration.py  test_ics_export.py  test_lwt_configuration.py  test_mqtt_publisher.py  test_mqtt_status_payload.py  test_mqtt_web_integration.py  test_network_utils.py  test_new_scraper.py  test_plugin_loader.py  test_publish_payloads.py  test_scraper.py  (+13 more)
tests/ha_discovery/: __init__.py  test_entity.py  test_publisher.py  test_status_sensor.py
twick/: pyvenv.cfg
twickenham_events/: __init__.py
unraid/: twickenham-events.xml  twickevents.xml
