[project]
name = "twickenham-events"
version = "0.1.0"
description = "Fetch and process Twickenham Stadium events"
authors = [
    { name = "ronschaeffer", email = "ron@ronschaeffer.com" }
]
license = { text = "MIT" }
readme = "README.md"

[tool.poetry]
packages = [
    { include = "core" },
    { include = "tests", format = "sdist" }
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
paho-mqtt = "^2.1.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.1.1"
ronschaeffer-mqtt-publisher = {path = "../mqtt_publisher"}

[tool.poetry.scripts]
twick-events = "core.__main__:main"

[tool.poetry.group.ai.dependencies]
google-generativeai = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
# Enable the same rules as Home Assistant
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # Use X | Y for union types (Python 3.10+)
    "UP038",  # Use X | Y for isinstance checks (Python 3.10+)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
